--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"react-css-modules": "^4.7.1",
 		"react-dev-utils": "^4.2.1",
 		"react-dom": "^16.2.0",
+		"react-hammerjs": "^1.0.1",
 		"react-redux": "^5.0.6",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.2.2",
@@ -99,6 +100,8 @@
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.8.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.5.1"
+		"eslint-plugin-react": "^7.5.1",
+		"less": "^2.7.3",
+		"less-loader": "^4.0.5"
 	}
 }
